# serializer version: 1
# name: test_platform_setup_and_discovery[climate.air_conditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        '1',
        '2',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 86.0,
      'min_temp': 16.0,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.air_conditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.mvsdcwtskkezlnw5tk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.air_conditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.0,
      'fan_mode': None,
      'fan_modes': list([
        '1',
        '2',
      ]),
      'friendly_name': 'Air Conditioner',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 86.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 393>,
      'target_temp_step': 1.0,
      'temperature': 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.air_conditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.anbau-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'off',
      ]),
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.anbau',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.sq6fbd3pfkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.anbau-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Anbau',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'off',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'target_temp_step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.anbau',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[climate.bathroom_radiator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 70.0,
      'min_temp': 1.0,
      'preset_modes': list([
        'holiday',
        'eco',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bathroom_radiator',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.fc2ngmpckw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.bathroom_radiator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.5,
      'friendly_name': 'Bathroom radiator',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 70.0,
      'min_temp': 1.0,
      'preset_mode': None,
      'preset_modes': list([
        'holiday',
        'eco',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'target_temp_step': 0.5,
      'temperature': 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bathroom_radiator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.boiler_temperature_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.boiler_temperature_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': None,
    'unique_id': 'tuya.zgiyrxflahjowpcckw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.boiler_temperature_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 57.5,
      'friendly_name': 'Boiler Temperature Controller',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 384>,
      'target_temp_step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.boiler_temperature_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.clima_cucina-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'low',
        'middle',
        'high',
        'auto',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.clima_cucina',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.x7quooqakw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.clima_cucina-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 27.0,
      'fan_mode': 'auto',
      'fan_modes': list([
        'low',
        'middle',
        'high',
        'auto',
      ]),
      'friendly_name': 'Clima cucina',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'supported_features': <ClimateEntityFeature: 393>,
      'target_temp_step': 1.0,
      'temperature': 25.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.clima_cucina',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.el_termostato_de_la_cocina-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 7.0,
      'min_temp': 1.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.el_termostato_de_la_cocina',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.LmLMc0ht1KW2zYAIkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.el_termostato_de_la_cocina-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 45.0,
      'friendly_name': 'El termostato de la cocina',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 7.0,
      'min_temp': 1.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.5,
      'temperature': 4.6,
    }),
    'context': <ANY>,
    'entity_id': 'climate.el_termostato_de_la_cocina',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.empore-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'off',
      ]),
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.empore',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.paxijfx9fkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.empore-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.0,
      'friendly_name': 'Empore',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_mode': None,
      'preset_modes': list([
        'off',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'target_temp_step': 1.0,
      'temperature': 35.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.empore',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.floor_thermostat_kitchen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'off',
      ]),
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat_kitchen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.oq9ksabjz6tip49tkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.floor_thermostat_kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'friendly_name': 'Floor Thermostat Kitchen',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'preset_mode': None,
      'preset_modes': list([
        'off',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 1.0,
      'temperature': 2.3,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat_kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.geti_solar_pv_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.geti_solar_pv_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.fcacn8iqbocuow7dsr',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.geti_solar_pv_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 60.0,
      'friendly_name': 'Geti Solar PV Water Heater',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 0>,
      'target_temp_step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.geti_solar_pv_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.itc_308_wifi_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
      ]),
      'max_temp': 212.0,
      'min_temp': -40.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.itc_308_wifi_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'tuya.9Ry4oUpdAYq8Pe0Bkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.itc_308_wifi_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 34.0,
      'friendly_name': 'ITC-308-WIFI Thermostat',
      'hvac_modes': list([
      ]),
      'max_temp': 212.0,
      'min_temp': -40.0,
      'supported_features': <ClimateEntityFeature: 1>,
      'target_temp_step': 0.5,
      'temperature': 35.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.itc_308_wifi_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.kabinet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 95.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'program',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kabinet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.dn7cjik6kw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.kabinet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 19.5,
      'friendly_name': 'Кабінет',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 95.0,
      'min_temp': 5.0,
      'preset_mode': None,
      'preset_modes': list([
        'program',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 0.5,
      'temperature': 21.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kabinet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.master_bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 88.0,
      'min_temp': 16.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.master_bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.g1fmm26qhhrimmbitk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.master_bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 0,
      'current_temperature': 26.0,
      'friendly_name': 'Master Bedroom AC',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 88.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.5,
      'temperature': 75.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.master_bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.mini_split-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 90.0,
      'min_temp': 16.0,
      'swing_modes': list([
        'off',
        'horizontal',
      ]),
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.mini_split',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 417>,
    'translation_key': None,
    'unique_id': 'tuya.zzz87dkfce6pdqxwtk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.mini_split-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 69.0,
      'friendly_name': 'Mini-Split',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 90.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 417>,
      'swing_mode': 'off',
      'swing_modes': list([
        'off',
        'horizontal',
      ]),
      'target_temp_step': 1.0,
      'temperature': 66.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.mini_split',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.mr_pure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.mr_pure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'tuya.gnqwzcph94wj2sl5nq',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.mr_pure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Mr. Pure',
      'hvac_modes': list([
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 0>,
      'target_temp_step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.mr_pure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.polotentsosushitel-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 40.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'holiday',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.polotentsosushitel',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'tuya.53apxfah2qoxb1cgkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.polotentsosushitel-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 25.3,
      'friendly_name': 'Полотенцосушитель',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 40.0,
      'min_temp': 5.0,
      'preset_mode': None,
      'preset_modes': list([
        'holiday',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 0.5,
      'temperature': 5.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.polotentsosushitel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.salon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 5.9,
      'min_temp': 0.1,
      'preset_modes': list([
        'holiday',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.salon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 17>,
    'translation_key': None,
    'unique_id': 'tuya.gm0whbftkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.salon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.3,
      'friendly_name': 'Salon',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 5.9,
      'min_temp': 0.1,
      'preset_mode': None,
      'preset_modes': list([
        'holiday',
      ]),
      'supported_features': <ClimateEntityFeature: 17>,
      'target_temp_step': 0.5,
      'temperature': 5.9,
    }),
    'context': <ANY>,
    'entity_id': 'climate.salon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.smart_thermostats-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 90.0,
      'min_temp': 5.0,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.smart_thermostats',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.sb3zdertrw50bgogkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.smart_thermostats-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.5,
      'friendly_name': 'smart thermostats',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 90.0,
      'min_temp': 5.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 1.0,
      'temperature': 12.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.smart_thermostats',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.sove-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        '1',
        '2',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 86.0,
      'min_temp': 16.0,
      'target_temp_step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.sove',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': 'tuya.dt4whlrosmnldadvtk',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.sove-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 24.0,
      'fan_mode': None,
      'fan_modes': list([
        '1',
        '2',
      ]),
      'friendly_name': 'Sove',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 86.0,
      'min_temp': 16.0,
      'supported_features': <ClimateEntityFeature: 393>,
      'target_temp_step': 1.0,
      'temperature': 16.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.sove',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[climate.term_prizemi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 70.0,
      'min_temp': 0.5,
      'target_temp_step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.term_prizemi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.jm2fsqtzuhqtbo5ykw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.term_prizemi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.0,
      'friendly_name': 'Term - Prizemi',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 70.0,
      'min_temp': 0.5,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.1,
      'temperature': 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.term_prizemi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_platform_setup_and_discovery[climate.wifi_smart_gas_boiler_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.wifi_smart_gas_boiler_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'tuya.j6mn1t4ut5end6ifkw',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[climate.wifi_smart_gas_boiler_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 24.9,
      'friendly_name': 'WiFi Smart Gas Boiler Thermostat ',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      'max_temp': 35.0,
      'min_temp': 5.0,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 0.5,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.wifi_smart_gas_boiler_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_cool',
  })
# ---
# name: test_us_customary_system[climate.air_conditioner]
  ReadOnlyDict({
    'current_temperature': 22,
    'max_temp': 86,
    'min_temp': 16,
    'target_temp_step': 1.0,
    'temperature': 23,
  })
# ---
# name: test_us_customary_system[climate.anbau]
  ReadOnlyDict({
    'max_temp': 95,
    'min_temp': 41,
    'target_temp_step': 1.0,
  })
# ---
# name: test_us_customary_system[climate.bathroom_radiator]
  ReadOnlyDict({
    'current_temperature': 67,
    'max_temp': 158,
    'min_temp': 34,
    'target_temp_step': 0.5,
    'temperature': 54,
  })
# ---
# name: test_us_customary_system[climate.boiler_temperature_controller]
  ReadOnlyDict({
    'current_temperature': 136,
    'max_temp': 95,
    'min_temp': 45,
    'target_temp_step': 1.0,
  })
# ---
# name: test_us_customary_system[climate.clima_cucina]
  ReadOnlyDict({
    'current_temperature': 81,
    'max_temp': 95,
    'min_temp': 41,
    'target_temp_step': 1.0,
    'temperature': 77,
  })
# ---
# name: test_us_customary_system[climate.el_termostato_de_la_cocina]
  ReadOnlyDict({
    'current_temperature': 113,
    'max_temp': 45,
    'min_temp': 34,
    'target_temp_step': 0.5,
    'temperature': 40,
  })
# ---
# name: test_us_customary_system[climate.empore]
  ReadOnlyDict({
    'current_temperature': 66,
    'max_temp': 95,
    'min_temp': 41,
    'target_temp_step': 1.0,
    'temperature': 95,
  })
# ---
# name: test_us_customary_system[climate.floor_thermostat_kitchen]
  ReadOnlyDict({
    'current_temperature': -4,
    'max_temp': 66,
    'min_temp': 12,
    'target_temp_step': 1.0,
    'temperature': 4,
  })
# ---
# name: test_us_customary_system[climate.geti_solar_pv_water_heater]
  ReadOnlyDict({
    'current_temperature': 140,
    'max_temp': 95,
    'min_temp': 45,
    'target_temp_step': 1.0,
  })
# ---
# name: test_us_customary_system[climate.itc_308_wifi_thermostat]
  ReadOnlyDict({
    'current_temperature': 93,
    'max_temp': 414,
    'min_temp': -40,
    'target_temp_step': 0.5,
    'temperature': 95,
  })
# ---
# name: test_us_customary_system[climate.kabinet]
  ReadOnlyDict({
    'current_temperature': 67,
    'max_temp': 203,
    'min_temp': 41,
    'target_temp_step': 0.5,
    'temperature': 71,
  })
# ---
# name: test_us_customary_system[climate.master_bedroom_ac]
  ReadOnlyDict({
    'current_temperature': 79,
    'max_temp': 190,
    'min_temp': 61,
    'target_temp_step': 0.5,
    'temperature': 167,
  })
# ---
# name: test_us_customary_system[climate.mini_split]
  ReadOnlyDict({
    'current_temperature': 69,
    'max_temp': 90,
    'min_temp': 16,
    'target_temp_step': 1.0,
    'temperature': 66,
  })
# ---
# name: test_us_customary_system[climate.mr_pure]
  ReadOnlyDict({
    'current_temperature': None,
    'max_temp': 95,
    'min_temp': 45,
    'target_temp_step': 1.0,
  })
# ---
# name: test_us_customary_system[climate.polotentsosushitel]
  ReadOnlyDict({
    'current_temperature': 32,
    'max_temp': 104,
    'min_temp': 41,
    'target_temp_step': 1.0,
    'temperature': 41,
  })
# ---
# name: test_us_customary_system[climate.salon]
  ReadOnlyDict({
    'current_temperature': 69,
    'max_temp': 43,
    'min_temp': 32,
    'target_temp_step': 0.5,
    'temperature': 43,
  })
# ---
# name: test_us_customary_system[climate.smart_thermostats]
  ReadOnlyDict({
    'current_temperature': 71,
    'max_temp': 194,
    'min_temp': 41,
    'target_temp_step': 1.0,
    'temperature': 54,
  })
# ---
# name: test_us_customary_system[climate.sove]
  ReadOnlyDict({
    'current_temperature': 75,
    'max_temp': 187,
    'min_temp': 61,
    'target_temp_step': 1.0,
    'temperature': 61,
  })
# ---
# name: test_us_customary_system[climate.term_prizemi]
  ReadOnlyDict({
    'current_temperature': 73,
    'max_temp': 158,
    'min_temp': 33,
    'target_temp_step': 0.1,
    'temperature': 73,
  })
# ---
# name: test_us_customary_system[climate.wifi_smart_gas_boiler_thermostat]
  ReadOnlyDict({
    'current_temperature': 77,
    'max_temp': 95,
    'min_temp': 41,
    'target_temp_step': 0.5,
    'temperature': 72,
  })
# ---
